fixed: footer css for alignment

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    text-align: left;
+    text-align: center;
     display: block;
     margin: 15px auto 30px auto;
     font-size: 12px;
